@@ -4,6 +4,8 @@
 	new feature: IPV4_TREE_SHOW_USAGE option controls IPv4 performance
 	new feature: ability to delete objects (by Aaron)
 	new feature: external "httpd" user authentication
+	new feature: validator in RackCode editor
+	new feature: vendor sieve for stickers
 	update: display row name when listing objects. closes ticket 16 (by Aaron)
 	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
 	update: IPv4 calculations were optimized for better speed
